Sources and output separated

--- a/index.html
+++ b/index.html
@@ -1,21 +1,1 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/dist/output.css" rel="stylesheet">
-</head>
-<body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
-</body>
-<script>
-  document.write(
-    '<script src="http://' +
-      (location.host || '${1:localhost}').split(':')[0] +
-      ':${2:35729}/livereload.js?snipver=1"></' +
-      'script>'
-  );
-</script>
-</html>
+<!doctype html><html><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="bundle.js"></script><link href="main.css" rel="stylesheet"></head><body class="h-screen w-screen"><figure class="md:flex p-8 md:p-0"><div class="pt-3 pb-6 md:p-8 text-center md:text-left space-y-4"><figcaption class="font-medium"><div class="text-sky-900 text-2xl">Tiana Bodytherapy</div></figcaption></div><img class="w-32 h-32 md:w-48 md:h-auto md:rounded-none rounded-full mx-auto object-cover" src="/images/avatar.jpg" alt="" width="384" height="512"><div class="pt-6 md:p-8 text-justify md:text-left space-y-4 text-sky-500"><blockquote><p class="text-lg font-medium">Здравствуйте, прекрасные люди 🤗❤️ Рада приветствовать Вас на своей странице.</p></blockquote><blockquote><p class="text-lg font-medium">Я телесный психотерапевт и я предлагаю помощь в достижении гармонии в теле🏃, мыслях🤔 и эмоциях🙂</p></blockquote></div></figure><script src="bundle.js"></script></body></html>
