--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!doctype html><html><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="bundle.js"></script><link href="main.css" rel="stylesheet"></head><body class="h-screen w-screen bg-background"><img src="/images/flower-corner.png" class="fixed top-0 left-0 -z-50"><figure class="mx-auto max-w-2xl"><figure class="md:flex p-8 md:p-0"><img class="hidden md:block md:w-48 md:h-auto md:rounded-none md:rounded-b-lg object-cover" src="/images/avatar-big.jpg" alt="" width="384" height="575"><div class="pt-2 pl-6 pb-8 text-justify md:text-left space-y-4 text-paragraph"><div class="md:p-8 space-y-4 md:text-left text-center"><figcaption class="font-medium"><div class="text-title text-2xl drop-shadow shadow-white">Tiana Bodytherapy</div></figcaption></div><img class="md:hidden block w-32 h-32 rounded-full mx-auto object-cover" src="/images/avatar-small.jpg" alt="" width="384" height="575"><blockquote><p class="text-lg font-medium">Здравствуйте, прекрасные люди 🤗❤️ Рада приветствовать Вас на своей странице.</p></blockquote><blockquote><p class="text-lg font-medium">Я телесный психотерапевт и я предлагаю помощь в достижении гармонии в теле🏃, мыслях🤔 и эмоциях🙂</p></blockquote></div></figure><figure class="pt-8 flex flex-col justify-center justify-items-center content-center w-full text-white"><button class="rounded-full mx-auto m-1 p-2 h-10 w-60 bg-instagram-up hover:bg-instagram-hover active:bg-instagram-active">Instagram</button> <button class="rounded-full mx-auto m-1 p-2 h-10 w-60 bg-whatsApp-up hover:bg-whatsApp-hover active:bg-whatsApp-active">WhatsApp</button> <button class="rounded-full mx-auto m-1 p-2 h-10 w-60 bg-telegram-up hover:bg-telegram-hover active:bg-telegram-active">Telegram</button></figure></figure><script src="bundle.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tiana Bodytherapy</title>
+    <script type="module" crossorigin src="/assets/index.8b52b73b.js"></script>
+    <link rel="stylesheet" href="/assets/index.694d2587.css">
+  </head>
+  <body class="h-screen w-screen bg-background">
+    <div id="root"></div>
+    
+  </body>
+</html>
